@@ -3,7 +3,7 @@ useDynLib(utils, .registration = TRUE, .fixes = "C_")
 
 export("?", .DollarNames, .S3methods, .romans, CRAN.packages, Rprof,
        Rprofmem, RShowDoc, RSiteSearch, URLdecode, URLencode, View,
-       adist, alarm, apropos, aregexec, argsAnywhere, askYesNo,
+       adist, alarm, apropos, aregexec, argsAnywhere, asDateBuilt, askYesNo,
        assignInMyNamespace, assignInNamespace, as.roman, as.person,
        as.personList, as.relistable, aspell, aspell_package_C_files,
        aspell_package_R_files, aspell_package_Rd_files,
@@ -27,7 +27,7 @@ export("?", .DollarNames, .S3methods, .romans, CRAN.packages, Rprof,
        ls.str, lsf.str, maintainer, make.packages.html, make.socket,
        memory.limit, memory.size, menu, methods, mirror2html,
        modifyList, new.packages, news, object.size, old.packages,
-       package.skeleton, packageDescription, packageName,
+       package.skeleton, packageDate, packageDescription, packageName,
        packageVersion, packageStatus, page, person, personList, pico,
        process.events, prompt, promptData, promptImport,
        promptPackage, rc.getOption, rc.options, rc.settings,
